Add content processors for note embedding and internal linking
- Implement `embedIncludeNote` to process note embed/include sections.
- Create `internalReferenceLink` to convert internal reference links to URLs.
- Introduce `TriliumApi` class for API interactions.
- Update `triliumLoader` to utilize new API methods and processors.
- Adjust `optimizeImageUrls` import statement for compatibility.
- Modify `types.ts` to include `TriliumApi` in `ContentProcessorConfig`.
- Update `tsconfig.json` to revert target to ES6 and include all files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES6",
     "module": "NodeNext",
     "declaration": true,
     "outDir": "./dist",
@@ -20,6 +20,6 @@
       "*": ["*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["**/*"],
+  "exclude": ["dist", "tests"]
 }
