--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "tsc"
+    "prepare": "tsc"
   },
   "keywords": [],
   "author": "ReinforceZwei",
